# composer

composer-engine/: Cargo.toml
composer-engine/pkg/: composer_engine.d.ts  composer_engine.js  composer_engine_bg.wasm  composer_engine_bg.wasm.d.ts  package.json
composer-engine/src/: lib.rs  utils.rs
composer-engine/src/components/: articulation.rs  duration.rs  measurements.rs  misc.rs  mod.rs  pitch.rs  text.rs  units.rs  velocity.rs
composer-engine/src/entries/: barline.rs  clef.rs  key_signature.rs  mod.rs  time_signature.rs  tone.rs
composer-engine/src/parse/: draw_accidentals.rs  draw_barlines.rs  draw_beams.rs  draw_braces.rs  draw_brackets.rs  draw_clefs.rs  draw_dots.rs  draw_flags.rs  draw_key_signatures.rs  draw_ledger_lines.rs  draw_names.rs  draw_noteheads.rs  draw_rests.rs  draw_staves.rs  draw_stems.rs  draw_sub_brackets.rs  draw_systemic_barline.rs  draw_ties.rs  draw_time_signatures.rs  get_accidentals.rs  get_barlines.rs  get_bars.rs  get_beams.rs  get_dot_slots.rs  get_dots.rs  get_flow_players.rs  get_note_positions.rs  get_shunts.rs  get_stem_directions.rs  get_stem_lengths.rs  get_tone_offsets.rs  get_tone_vertical_offsets.rs  get_vertical_spans.rs  get_written_durations.rs  measure_brackets_and_braces.rs  measure_horizontal_spacing.rs  measure_instrument_names.rs  measure_text.rs  measure_vertical_spacing.rs  mod.rs
composer-engine/src/render/: line.rs  mod.rs
composer-engine/src/score/: config.rs  engrave.rs  flows.rs  meta.rs  mod.rs  players.rs  stave.rs  tracks.rs
composer-engine/src/score/instruments/: defs.rs  mod.rs  utils.rs
composer-engine/tests/: get_beams.rs  get_written_durations.rs
composer-ui/: tsconfig.json
composer-ui/src/: index.tsx
composer-web/: .eslintrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
composer-web/public/patches/: contents.json
composer-web/src/: bootstrap.ts  index.html  index.tsx
composer-web/src/assets/: site.webmanifest
composer-web/src/data/: actions-app.ts  actions-play.ts  actions-setup.ts  actions-ui.ts  actions.ts  defs.ts  index.ts  utils.ts
composer-web/src/engine/: index.ts
composer-web/static/: index.html  site.webmanifest
(+198 files in other folders)
