[package]
name = "composer-engine"
version = "1.0.0"
authors = ["Aled Jones <aledjones.viola@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.56"
maplit = "1.0.2"
lazy_static = "1.4.0"
roman = "0.1.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = 3
